# odoo_yo

./: .gitignore  README.md  codex_shell_audit.js  dev.profile.md  pyproject.toml
data/addendas/: known_addendas.json
data/app_ui/: app_ui.css  app_ui_i18n.js
data/app_ui/components/: AppDataTable.vue  AppHeader.vue  AppKPIs.vue  AppShell.vue  AppSidebar.vue
data/app_ui/css/: 00_core.css  10_dashboard.css  20_components.css  20_tables.css  25_kpis.css  30_forms.css
data/app_ui/i18n/: messages.yml
data/app_ui/js/: app_ui_state.js  invoicing_ui_components.js  invoicing_ui_markup.js
data/app_ui_unocss/: app_ui.css  app_ui_config.js  app_ui_i18n.js  app_ui_vue.js  assets_backend.xml
data/app_ui_unocss/components/: AppDataTable.vue  AppHeader.vue  AppKPIs.vue  AppShell.vue  AppSidebar.vue  (+1 more)
docs/: app_ui_buyniverse_audit.md  app_ui_shell_buyniverse_audit.md  app_ui_theme.md  invoice_api_bridge.md  theme_framework.md  theme_framework_vendor_sources.md
docs/app_ui_preview/: README.md  index.html
lib/: README.md  __init__.py  manifest.json
lib/python/: __init__.py
playbooks/: README.md  get_db_no_login_playbook.yaml  get_db_playbook.yaml  test_playbook.yaml
scripts/theme_framework/: deep_menu_map.py  deep_visual_audit.js  import_vendor_themes.py
src/odoo_bridge/: __init__.py  app_ui_cli.py  cli.py  cli_common.py  odoo_client.py  theme_framework_cli.py  yaml_catalog.py
src/odoo_yo_bridge/: __init__.py  app_ui_cli.py  cli.py  cli_common.py  gemini.prompt.md  invoice_api_bridge.py  invoice_api_server_actions.py  odoo_client.py  yaml_catalog.py
(+170 files in other folders)
